[package]
name = "rustssl"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# TLS
native-tls = "0.2"

# Парсинг сертификатов
x509-parser = "0.16"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Утилиты
anyhow = "1.0"
colored = "2.1"

[profile.release]
lto = true
strip = true
opt-level = 3
